# yew-sudoku

./: Cargo.toml  README.md  index-593ae9d36fea3577.js  index-593ae9d36fea3577_bg.wasm  index-9edf8a417860e14b.css  index.html
src/: board.rs  board_view.rs  cell.rs  controls.rs  digit.rs  generate.rs  main.rs  picker.rs  picker_cell.rs
style/: index.css
