[package]
name = "sudoku-brutalizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
logging = ["log", "wasm-logger"]

[dependencies]
enum-iterator = "0.7.0"
log = { version = "0.4.14", optional = true }
sudoku = { git = "https://github.com/BenjaminHinchliff/sudoku.git" }
getrandom = { version = "0.2.3", features = ["js"] }
thiserror = "1.0.26"
wasm-logger = { version = "0.2.0", optional = true }
yew = "0.18.0"
wee_alloc = "0.4.5"

[profile.release]
opt-level = 'z'
lto = true
